# Zadanie_Listy

./: CMakeLists.txt  Zadanie_10_Maciek_Danik_smartPtr.txt  main.cpp  test.txt
Combat/Include/: List.hpp
Combat/Source/: List.cpp
Combat/Test/: ListTest.cpp
Test/: ListTest.cpp
